# val

./: .gitattributes  CHANGELOG.md  Cargo.toml  GRAMMAR.txt  README.md  clippy.toml  justfile  mise.toml
.github/workflows/: ci.yaml  release.yaml  web.yaml
benches/: main.rs
crates/val-changelog/: Cargo.toml
crates/val-changelog/src/: main.rs
crates/val-wasm/: Cargo.toml
crates/val-wasm/src/: ast_node.rs  error.rs  lib.rs  range.rs
examples/: factorial.val  fibonacci.val  hoc.val  math.val  newton.val  newton_sqrt.val  strings.val  while.val
src/: analyzer.rs  arguments.rs  ast.rs  builtin.rs  builtin_function.rs  builtins.rs  completion.rs  config.rs  consts.rs  context.rs  decimal.rs  environment.rs  error.rs  eval.rs  eval_result.rs  evaluator.rs  float_ext.rs  frame.rs  function.rs  highlight_kind.rs  highlight_span.rs  highlighter.rs  lib.rs  main.rs  number.rs  parser.rs  prompt.rs  rounding_mode.rs  symbol.rs  value.rs
tests/: integration.rs
tools/example-generator/: justfile  main.py  pyproject.toml
www/: .gitignore  .prettierignore  index.html  package.json  vite.config.ts
www/src/: App.tsx  index.css  main.tsx
www/src/assets/examples/: factorial.val  fibonacci.val  hoc.val  hof.val  loop.val  primes.val  strings.val
www/src/components/: ast-node.tsx  editor.tsx  tree-viewer.tsx
www/src/components/ui/: dialog.tsx  select.tsx  switch.tsx
www/src/lib/: examples.ts  highlight.ts  types.ts
