[package]
name = "val"
version = "0.2.0"
authors = ["Liam <liam@scalzulli.com>"]
categories = ["science", "parser-implementations", "command-line-interface"]
description = "An arbitrary precision calculator language"
edition = "2024"
homepage = "https://github.com/terror/val"
keywords = ["productivity", "compilers"]
license = "CC0-1.0"
repository = "https://github.com/terror/val"
resolver = "2"

[workspace]
members = [".", "crates/*"]

[dependencies]
anyhow = "1.0.97"
ariadne = "0.5.1"
chumsky = "0.10.0"
clap = { version = "4.5.35", features = ["derive"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dirs = "6.0.0"
regex = "1.11.1"
rustyline = "15.0.0"

[dev-dependencies]
executable-path = "1.0.0"
indoc = "2.0.6"
pretty_assertions = "1.4.1"
tempfile = "3.19.1"
unindent = "0.2.4"
