[package]
name = "val"
version = "0.3.6"
authors = ["Liam <liam@scalzulli.com>"]
categories = ["science", "parser-implementations", "command-line-interface"]
description = "An arbitrary precision calculator language"
edition = "2024"
homepage = "https://github.com/terror/val"
keywords = ["productivity", "compilers"]
license = "CC0-1.0"
repository = "https://github.com/terror/val"
resolver = "2"

[workspace]
members = [".", "crates/*"]

[[bench]]
name = "main"
harness = false

[dependencies]
anyhow = "1.0.97"
ariadne = "0.5.1"
astro-float = { version = "0.9.5", default-features = false, features = ["std"] }
chumsky = "0.10.0"
clap = { version = "4.5.35", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
num-traits = "0.2.19"
rug = "1.27.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dirs = "6.0.0"
regex = "1.11.1"
rustyline = "15.0.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
executable-path = "1.0.0"
indoc = "2.0.6"
pretty_assertions = "1.4.1"
tempfile = "3.19.1"
unindent = "0.2.4"
