[package]
name = "val"
version = "0.3.6"
authors = ["Liam <liam@scalzulli.com>"]
categories = ["science", "parser-implementations", "command-line-interface"]
description = "An arbitrary precision calculator language"
edition = "2024"
homepage = "https://github.com/terror/val"
keywords = ["productivity", "compilers"]
license = "CC0-1.0"
repository = "https://github.com/terror/val"
resolver = "2"

[profile.release]
lto = true
codegen-units = 1

[lints]
workspace = true

[workspace]
members = [".", "crates/*"]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
pedantic = { level = "deny", priority = -1 }
wildcard_imports = "allow"

[workspace.lints.rust]
unreachable_pub = "deny"

[[bench]]
name = "main"
harness = false

[dependencies]
anyhow = "1.0.100"
ariadne = "0.5.1"
chumsky = { version = "0.10.1", features = ["pratt"] }
clap = { version = "4.5.51", features = ["derive"] }
gmp-mpfr-sys = { version = "~1.7", default-features = false, optional = true }
rug = { version = "1.30.0", default-features = false, features = ["float", "rational", "std"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dirs = "6.0.0"
regex = "1.12.2"
rustyline = "18.0.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
executable-path = "1.0.0"
indoc = "2.0.7"
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
unindent = "0.2.4"

[features]
force-cross = ["dep:gmp-mpfr-sys", "gmp-mpfr-sys/force-cross"]
